--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/kmorihiro/rhd-2017-storybot#readme",
   "dependencies": {
     "botbuilder": "^3.8.4",
-    "restify": "^5.0.1"
+    "restify": "^5.0.1",
+    "sprintf-js": "^1.1.1"
   }
 }
